--- a/components/x-menu.html
+++ b/components/x-menu.html
@@ -21,7 +21,7 @@
 	Polymer('x-menu',{
 	
 	created: function (){
-		console.log('MENU CREATO!!!!!!!!!!!!!!!!!!!')
+		//console.log('MENU CREATO!!!!!!!!!!!!!!!!!!!')
 		//do il focus alla mia finestra
 		$(this).focus();
 
