--- a/components/x-window.html
+++ b/components/x-window.html
@@ -47,7 +47,7 @@
 
 			target = htmlElement;
 			
-			console.log('target is', target);
+			//console.log('target is', target);
 
 			this.webkitShadowRoot.querySelector('.window').style.left='110px';
 			this.webkitShadowRoot.querySelector('.window').style.top='110px';	
@@ -57,7 +57,6 @@
 				this.webkitShadowRoot.querySelector('.window').style.top=position.top+'px';
 			}.bind(this));
 		},
-
 	});
 	</script>
 </polymer-element>
