focus management improuvements (still not working properly)

--- a/components/x-articolo.html
+++ b/components/x-articolo.html
@@ -5,8 +5,8 @@
 	</template>
 	<script>
 	Polymer('x-articolo', {
-		focus: function (){
-			this.webkitShadowRoot.querySelector('x-articolocodice').focus();
+		myfocus: function (){
+			this.webkitShadowRoot.querySelector('x-articolocodice').myfocus();
 		}
 	});
 	</script>
