--- a/components/x-articolodescrizione.html
+++ b/components/x-articolodescrizione.html
@@ -9,7 +9,7 @@
 	Polymer('x-articolodescrizione', {
 		value: '',
 		lenght: 15,
-		focus: function (){
+		myfocus: function (){
 			this.webkitShadowRoot.querySelector('input').focus();
 		}
 	});
