--- a/components/x-ddtselezione.html
+++ b/components/x-ddtselezione.html
@@ -26,7 +26,7 @@
 		},
 		/*focus management*/
 		focusedID: -1,
-		focus: focus,
+		myfocus: myfocus,
 		focusNext: focusNext,
 		getFocusAble : getFocusAble,
 	});
