--- a/components/x-fornitore-ragionesociale.html
+++ b/components/x-fornitore-ragionesociale.html
@@ -5,7 +5,7 @@
 	<script>
 	Polymer('x-fornitore-ragionesociale', {
 		value: '',
-		focus: function (){
+		myfocus: function (){
 			this.webkitShadowRoot.querySelector('input').focus();
 		}
 	});
