--- a/components/x-imballaggio.html
+++ b/components/x-imballaggio.html
@@ -6,8 +6,8 @@
 	<script>
 	Polymer('x-imballaggio', {
 		value: '',
-		focus: function (){
-			this.webkitShadowRoot.querySelector('x-imballaggiocodice').focus();
+		myfocus: function (){
+			this.webkitShadowRoot.querySelector('x-imballaggiocodice').myfocus();
 		}
 	});
 	</script>
