--- a/components/x-vettore.html
+++ b/components/x-vettore.html
@@ -62,7 +62,7 @@
 		},
 		/*focus management*/
 		focusedID: -1,
-		focus: focus,
+		myfocus: myfocus,
 		focusNext: focusNext,
 		getFocusAble : getFocusAble,
 	});
