--- a/components/x-window.html
+++ b/components/x-window.html
@@ -57,6 +57,11 @@
 				this.webkitShadowRoot.querySelector('.window').style.top=position.top+'px';
 			}.bind(this));
 		},
+		myfocus: function () {
+			setTimeout(function (){
+				//this.webkitShadowRoot.querySelector('#window').focus();
+			}.bind(this), 1);
+		}
 	});
 	</script>
 </polymer-element>
