--- a/components/x-fornitore.html
+++ b/components/x-fornitore.html
@@ -63,7 +63,7 @@
 		
 		/*focus management*/
 		focusedID: -1,
-		focus: focus,
+		myfocus: myfocus,
 		focusNext: focusNext,
 		getFocusAble : getFocusAble,
 
