--- a/components/x-imballaggiocodice.html
+++ b/components/x-imballaggiocodice.html
@@ -8,7 +8,7 @@
 	<script>
 	Polymer('x-imballaggiocodice', {
 		value: '',
-		focus: function (){
+		myfocus: function (){
 			this.webkitShadowRoot.querySelector('input').focus();
 		}
 	});
