--- a/components/x-numero.html
+++ b/components/x-numero.html
@@ -13,18 +13,29 @@
 		label:'',
 		//value:'',
 		created: function (){
+		//console.log(this.webkitShadowRoot.querySelector('input').outerHTML);
 			this.tabIndex = 0;
 			if(this.decimali>0){var virgola=1;}else{var virgola=0;}
 			this.totalecaratteri = this.interi+virgola+this.decimali;
-			$(this.webkitShadowRoot.querySelector('input')).focus();
-			this.webkitShadowRoot.querySelector('input').onblur = function(){alert('hoperso il focus');}
+			//$(this.webkitShadowRoot.querySelector('input')).myfocus();
+			//this.webkitShadowRoot.querySelector('input').onblur = function(){alert('hoperso il focus');}
 			
 		},
-		focus: function (){
-			console.log('the focus funcion of xnumero has been called!');
-			console.log(this.webkitShadowRoot.querySelector('input'));
+		myfocus: function (){
+			//alert('received fosus:'+this.nodeName);
+			//console.log('received focus ', this.nodeName, this);
+			//alert('calling focus on '+this.webkitShadowRoot.querySelector('input').nodeName);
+			setTimeout(function (){
+				this.webkitShadowRoot.querySelector('input').focus();
+			}.bind(this), 1);
+			
+//			console.log(this.webkitShadowRoot.querySelector('input').outerHTML);
+//					alert(this.webkitShadowRoot.querySelector('input').nodeName);
+//			this.webkitShadowRoot.querySelector('input').value="111 i've focus";
+			//console.log('the focus funcion of xnumero has been called!');
+			//console.log(this.webkitShadowRoot.querySelector('input'));
 			//this.webkitShadowRoot.querySelector('input').impl.color='red';
-			console.log(this.webkitShadowRoot.querySelector('input').impl.focus());
+			//console.log(this.webkitShadowRoot.querySelector('input').impl.myfocus());
 		}
 	});
 	</script>
