--- a/components/x-pannel.html
+++ b/components/x-pannel.html
@@ -43,7 +43,7 @@
  
 		/*focus management*/
 		focusedID: -1,
-		focus: focus,
+		myfocus: myfocus,
 		focusNext: focusNext,
 		getFocusAble : getFocusAble,
     });
