--- a/components/x-pesolordo.html
+++ b/components/x-pesolordo.html
@@ -5,8 +5,8 @@
 	<script>
 	Polymer('x-pesolordo', {
 		value: '',
-		focus: function (){
-			this.webkitShadowRoot.querySelector('x-numero').focus();
+		myfocus: function (){
+			this.webkitShadowRoot.querySelector('x-numero').myfocus();
 		}
 	});
 	</script>
