--- a/components/x-menu.html
+++ b/components/x-menu.html
@@ -13,7 +13,7 @@
 			background-color:white;
 		  }
 		</style>
-		<div class="menu" tabindex="1">
+		<div class="menu">
 			<content></content>
 		</div>
 	</template>
@@ -21,14 +21,8 @@
 	Polymer('x-menu',{
 		
 		created: function (){
-			//console.log('MENU CREATO!!!!!!!!!!!!!!!!!!!')
-			//do il focus alla mia finestra
-			//$(this).myfocus();
-			/*
-			setTimeout(function (){
-				this.webkitShadowRoot.querySelector('#menu').focus();
-			}.bind(this), 1);
-			*/
+			this.tabIndex = 0;
+		console.log('x-menu has been activated')
 			this.myfocus();
 			//manage keyboard events
 			$(this).keydown(function(event) {
@@ -55,7 +49,7 @@
 		myfocus: function (){
 			setTimeout(function (){
 				console.log('the focus is now on the menu')
-				this.webkitShadowRoot.querySelector('#menu').focus();
+				this.webkitShadowRoot.querySelector('div').focus();
 			}.bind(this), 1);
 		}
 
