--- a/components/x-window.html
+++ b/components/x-window.html
@@ -21,10 +21,11 @@
 			background-color: #e1e1e1;
 			border-bottom: 1px solid #a1a1a1; 
 			padding: 0.3em;
+			color:black;
 		  }
 		  .content{
   			padding:1em;
-			color: #dbdbdb;
+			/*color: #dbdbdb;*/
 		  }
 		</style>
 		<div class="window">
@@ -40,7 +41,7 @@
 		hide: function () {},
 		minimize: function (){},
 		created: function (){
-			this.tabIndex = 0;
+			//this.tabIndex = 0;
 			//console.log('IO SONO STATO CREATO DA ', this, this.host);
 		},
 		setPosition: function (htmlElement, htmlElementPoint, myPoint){
