more focus work

--- a/components/x-ddt.html
+++ b/components/x-ddt.html
@@ -94,7 +94,7 @@
 			console.log(event.currentTarget.nodeName);
 			switch (event.which){
 				case 112: 
-					console.log(event.which);
+					//console.log(event.which);
 					this.webkitShadowRoot.innerHTML +='<x-query-window params=\'{"_type":"causalispedizione","codice":["!=",""]}\'><x-query-window>';
 					event.preventDefault();
 					event.stopPropagation();
