--- a/components/x-fornitore.html
+++ b/components/x-fornitore.html
@@ -54,7 +54,7 @@
 				switch (event.which){
 					case 13:
 						return this.focusNext();
-					default: console.log(event.which);
+					//default: console.log(event.which);
 				}
 			});
 			/*focus management*/
