--- a/components/x-pannel.html
+++ b/components/x-pannel.html
@@ -22,9 +22,9 @@
 				switch (event.which){
 						case 13:
 							var test= this.focusNext();
-							console.log(test);
+							//console.log(test);
 							return test;
-					default: console.log(event.which);
+					//default: console.log(event.which);
 				}
 			});
 
