--- a/components/x-window.html
+++ b/components/x-window.html
@@ -28,9 +28,8 @@
 			/*color: #dbdbdb;*/
 		  }
 		</style>
-		<div class="window" on-click="setFocus">
+		<div class="window">
 			<div class="title">{{title}}</div>
-			<input id="nameInput"  type="text">
 			<div class="content"><content></content></div>
 		</div>
 	</template>
@@ -41,30 +40,13 @@
 		close: function (){},
 		hide: function () {},
 		minimize: function (){},
-
-		 	enteredView: function() {
-			console.log('we are here!!');
-			this.webkitShadowRoot.querySelector('input').focus();
-      },
-	  
+  
 		created: function (){
-		//console.log(this.webkitShadowRoot.querySelector('input'));
-		//alert('creato x window');
-			//test = this.webkitShadowRoot.querySelector('input');
-			//this.$.nameInput.focus();
-			//this.tabIndex = 0;
-			//console.log('IO SONO STATO CREATO DA ', this, this.host);
-		},
-		setFocus:function (){
-			console.log('gli do il focus');
-			this.webkitShadowRoot.querySelector('input').focus();
-			//this.$.nameInput.focus();
+			this.myfocus();
 		},
 		setPosition: function (htmlElement, htmlElementPoint, myPoint){
 
 			target = htmlElement;
-			
-			//console.log('target is', target);
 
 			this.webkitShadowRoot.querySelector('.window').style.left='110px';
 			this.webkitShadowRoot.querySelector('.window').style.top='110px';	
@@ -76,8 +58,8 @@
 		},
 		myfocus: function () {
 			setTimeout(function (){
-				//this.webkitShadowRoot.querySelector('#window').focus();
-			}.bind(this), 1);
+				this.focus();
+			}.bind(this), 10);
 		}
 	});
 	</script>
