--- a/components/x-ddtselezione.html
+++ b/components/x-ddtselezione.html
@@ -18,7 +18,7 @@
 				switch (event.which){
 					case 13:
 						return this.focusNext();
-					default: console.log(event.which);
+					//default: console.log(event.which);
 				}
 			});
 			/*focus management*/
