--- a/components/x-riga.html
+++ b/components/x-riga.html
@@ -45,7 +45,7 @@
 				switch (event.which){
 					case 13:
 						return this.focusNext();
-					default: console.log(event.which);
+					//default: console.log(event.which);
 				}
 			});
 			
