--- a/components/x-spedizione.html
+++ b/components/x-spedizione.html
@@ -9,8 +9,8 @@
 		value: '',
 		created: function (){
 
-			this.codice = this.webkitShadowRoot.querySelector('x-spedizionecodice').webkitShadowRoot.querySelector('input');
-			this.descrizione =  this.webkitShadowRoot.querySelector('x-spedizionedescrizione').webkitShadowRoot.querySelector('input');
+			this.codice = this.webkitShadowRoot.querySelector('x-spedizionecodice').webkitShadowRoot.querySelector('x-input').webkitShadowRoot.querySelector('input');
+			this.descrizione =  this.webkitShadowRoot.querySelector('x-spedizionedescrizione').webkitShadowRoot.querySelector('x-input').webkitShadowRoot.querySelector('input');
 
 			// when the "codice input" change call my "oncodechange" method
 			// faccio questo passamano 
