--- a/components/x-vettore.html
+++ b/components/x-vettore.html
@@ -9,8 +9,8 @@
 		value: '',
 		created: function (){
 
-			this.codice = this.webkitShadowRoot.querySelector('x-vettorecodice').webkitShadowRoot.querySelector('input');
-			this.ragionesociale =  this.webkitShadowRoot.querySelector('x-vettoreragionesociale').webkitShadowRoot.querySelector('input');
+			this.codice = this.webkitShadowRoot.querySelector('x-vettorecodice').webkitShadowRoot.querySelector('x-input').webkitShadowRoot.querySelector('input');
+			this.ragionesociale =  this.webkitShadowRoot.querySelector('x-vettoreragionesociale').webkitShadowRoot.querySelector('x-input').webkitShadowRoot.querySelector('input');
 
 			// when the "codice input" change call my "oncodechange" method
 			// faccio questo passamano 
