--- a/components/x-numero.html
+++ b/components/x-numero.html
@@ -2,7 +2,7 @@
 	<template>
 	<label>
 		{{label}}
-		<input type="text" value="{{value}}" maxlength="{{totalecaratteri}}" size="{{totalecaratteri}}" style="width:{{totalecaratteri}}em">
+		<x-input type="text" value="{{value}}" maxlength="{{totalecaratteri}}" size="{{totalecaratteri}}" style="width:{{totalecaratteri}}em"></x-input>
 	</label>
 	</template>
 	<script>
@@ -13,29 +13,14 @@
 		label:'',
 		//value:'',
 		created: function (){
-		//console.log(this.webkitShadowRoot.querySelector('input').outerHTML);
 			this.tabIndex = 0;
 			if(this.decimali>0){var virgola=1;}else{var virgola=0;}
-			this.totalecaratteri = this.interi+virgola+this.decimali;
-			//$(this.webkitShadowRoot.querySelector('input')).myfocus();
-			//this.webkitShadowRoot.querySelector('input').onblur = function(){alert('hoperso il focus');}
-			
+			this.totalecaratteri = this.interi+virgola+this.decimali;		
 		},
 		myfocus: function (){
-			//alert('received fosus:'+this.nodeName);
-			//console.log('received focus ', this.nodeName, this);
-			//alert('calling focus on '+this.webkitShadowRoot.querySelector('input').nodeName);
 			setTimeout(function (){
-				this.webkitShadowRoot.querySelector('input').focus();
-			}.bind(this), 1);
-			
-//			console.log(this.webkitShadowRoot.querySelector('input').outerHTML);
-//					alert(this.webkitShadowRoot.querySelector('input').nodeName);
-//			this.webkitShadowRoot.querySelector('input').value="111 i've focus";
-			//console.log('the focus funcion of xnumero has been called!');
-			//console.log(this.webkitShadowRoot.querySelector('input'));
-			//this.webkitShadowRoot.querySelector('input').impl.color='red';
-			//console.log(this.webkitShadowRoot.querySelector('input').impl.myfocus());
+				this.webkitShadowRoot.querySelector('x-input').myfocus();
+			}.bind(this), 50);
 		}
 	});
 	</script>
