--- a/components/x-prezzo.html
+++ b/components/x-prezzo.html
@@ -2,14 +2,14 @@
 	<template>
 		<label>
 			Prezzo
-			<input type="text" value="{{value}}" maxlength="10" size="10">
+			<x-input type="text" value="{{value}}" maxlength="10" size="10"></x-input>
 		</label>
 	</template>
 	<script>
 	Polymer('x-prezzo', {
 		value: '',
 		myfocus: function (){
-			this.webkitShadowRoot.querySelector('input').focus();
+			this.webkitShadowRoot.querySelector('x-input').myfocus();
 		}
 	});
 	</script>
