--- a/components/x-vettorecodice.html
+++ b/components/x-vettorecodice.html
@@ -2,14 +2,14 @@
 	<template>
 		<label>
 			Vettore
-			<input type="text" value="{{value}}"  maxlength="5" size="5">
+			<x-input type="text" value="{{value}}"  maxlength="5" size="5"></x-input>
 		</label>
 	</template>
 	<script>
 	Polymer('x-vettorecodice', {
 		value: '',
 		myfocus: function (){
-			this.webkitShadowRoot.querySelector('input').focus();
+			this.webkitShadowRoot.querySelector('x-input').myfocus();
 		}
 	});
 	</script>
