--- a/components/x-data.html
+++ b/components/x-data.html
@@ -10,7 +10,13 @@
 		value: new Date().toJSON().slice(0,10),
 		myfocus: function (){
 			this.webkitShadowRoot.querySelector('x-input').myfocus();
+		},
+		/*
+		valueChanged: function (){
+			console.log('changing data');
+			//this.value=;
 		}
+		*/
 	});
 	</script>
 </polymer-element>
