--- a/components/x-query-window.html
+++ b/components/x-query-window.html
@@ -15,19 +15,23 @@
 
 		  }
 		   th {
+			font-family:arial;
 			font-weigth: bold;
 			background-color: #a1a1a1;
-			border-bottom: 1px solid #a1a1a1;
-			text-transform:uppercase;
+			color: #e1e1e1;
+			/*border-bottom: 1px solid #a1a1a1;*/
+			/*text-transform:uppercase;*/
 		  }
 		  td{
 			margin:0px;
 			padding-left:0.5em;
 			border-bottom: 1px solid #e1e1e1;
 		  }
-		  .selected {
-			color:white;
-			background-color:black;
+		  td:focus, .selected {
+			border-color:orange;
+			outline: none;
+			box-shadow: 0 0 10px orange;
+			background-color: orange;
 		  }
 		</style>
 		<x-window title="Seleziona un elemento..."></x-window>
@@ -36,18 +40,6 @@
 	<script>
 	Polymer('x-query-window',{
 	created: function (){
-		//creo i parametri della query da una stringa json
-		if(this.params){
-			this.params = this.params.replace("'/g", '"');
-			//ricavo i dati con cui riempire la finestra
-			this.getFromServer();
-		}
-		
-		if(this.jsonList){
-			this.jsonList = $.parseJSON(this.jsonList)
-			this.jsonToTable(this.jsonList);
-		}
-
 		$(this).keydown(function(event) {
 			switch (event.which){
 				case 38: this.table.prev();	break; //up
@@ -71,6 +63,11 @@
 			context: this,
 		}).done(function( msg ) {
 			if (msg){
+			//console.log(msg);
+				//rimpiazzo gli "a capo" con uno "spazio"
+				//msg = msg.replace(/\r/gm,' ');
+				//console.log(msg);
+				//
 				var jsonList = $.parseJSON(msg);
 				this.jsonToTable(jsonList);
 			}
@@ -120,6 +117,7 @@
 			
 			//seleziona il nuovo elemento
 			this.querySelector('#r'+id).classList.toggle('selected');
+			//this.querySelector('#r'+id).focus();
 			this.selected = id;
 		};
 		table.prev = function (){
@@ -152,7 +150,7 @@
 	},
 	
 	confirm : function (){
-		this.onconfirm(this.table.getSelection());
+		this.onConfirm(this.table.getSelection());
 		//remove me from the dom
 		this.parentNode.removeChild(this);
 		//and return the value
@@ -169,6 +167,19 @@
 		setTimeout(function (){
 				this.focus();
 		}.bind(this), 10);
+	},
+	paramsChanged: function (){
+		//creo i parametri della query da una stringa json
+		if(this.params){
+			this.params = this.params.replace("'/g", '"');
+			//ricavo i dati con cui riempire la finestra
+			this.getFromServer();
+		}
+		
+		if(this.jsonList){
+			this.jsonList = $.parseJSON(this.jsonList)
+			this.jsonToTable(this.jsonList);
+		}
 	}
 	
 });
